Implement text animation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         // Create a new game instance
         const game = new LORE();
         
-        // Define some rooms with formatting
+        // Define some rooms
         const room1 = {
             id: 'room1',
             name: '{{bold}}{{red}}The Forest{{font_reset}}',
