--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>L.O.R.E. Example with Formatting</title>
+    <title>L.O.R.E. Engine</title>
     <style>
       body {
         margin: 0;
@@ -12,68 +12,8 @@
   <body>
     <script src="lore.js"></script>
     <script>
-      // Create a new game instance
       const game = new LORE.Game();
-
-      // Define some rooms
-      const room1 = {
-        id: "room1",
-        image: "image",
-        name: "{{bold}}{{red}}The Forest{{font_reset}}",
-        description: "You are in a {{green}}dense forest{{color_reset}}. The trees are {{bold}}tall{{font_reset}} and the air is {{cyan}}fresh{{color_reset}}. A path leads {{yellow}}north{{color_reset}}.",
-        exits: {
-          north: "room2"
-        },
-        items: ["torch"]
-      };
-
-      const room2 = {
-        id: "room2",
-        name: "{{bold}}{{blue}}The Clearing{{font_reset}}",
-        description: "You are in a {{green}}peaceful clearing{{color_reset}}. A small cabin stands to the {{yellow}}east{{color_reset}}.",
-        exits: {
-          south: "room1",
-          east: "room3"
-        }
-      };
-
-      const room3 = {
-        id: "room3",
-        name: "{{bold}}{{magenta}}The Cabin{{font_reset}}",
-        description: "You are inside a {{underline}}small cabin{{font_reset}}. It's {{italic}}cozy{{font_reset}} but {{red}}empty{{color_reset}}.",
-        exits: {
-          west: "room2"
-        },
-        items: ["key"]
-      };
-
-      // Define some items
-      const torch = {
-        id: "torch",
-        name: "{{red}}Torch{{color_reset}}",
-        takeable: true,
-        use: (state, engine) => {
-          engine.printLine("The {{red}}torch{{color_reset}} {{yellow}}flickers brightly{{color_reset}}, illuminating the area.");
-          return true;
-        }
-      };
-
-      const key = {
-        id: "key",
-        name: "{{yellow}}Rusty Key{{color_reset}}",
-        takeable: true,
-        description: "An {{italic}}old, rusty key{{font_reset}}. It might unlock something."
-      };
-
-      // Add elements to the game
-      game.addRoom(room1);
-      game.addRoom(room2);
-      game.addRoom(room3);
-      game.addItem(torch);
-      game.addItem(key);
-
-      // Start the game
-      game.startGame("room1");
+      game.loadNovel('./sample/sample_novel.js');
     </script>
   </body>
 </html>
