--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>L.O.R.E. Engine</title>
+    <title>LoreJS - A text adventure engine for Node.js and browser</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width user-scalable=no">
     <style>
