Minor bugfixes and improvements

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <script src="lore.js"></script>
     <script>eruda.init()</script>
+    <div id="debug"></div>
     <script>
       const game = new LORE.Game();
       game.loadNovel('./sample/sample_novel.js');
