--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         padding: 0;
       }
     </style>
-    <script src="eruda.js"></script>
+    <script src="lib/eruda.js"></script>
   <body>
     <script src="lore.js"></script>
     <script>eruda.init()</script>
