Implement minification with terser.js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
     <script src="lib/eruda.js"></script>
   <body>
-    <script src="lore.js"></script>
+    <script src="lore.min.js"></script>
     <script>eruda.init()</script>
     <div id="debug"></div>
     <script>
