--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="debug"></div>
     <script>
       const game = new LORE.Game();
-      game.loadNovel('./sample/sample_novel.js');
+      game.loadNovel('./sample/sample_puzzle_novel.js');
     </script>
   </body>
 </html>
